# famu

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_training_examples.py  0003_farm_profile_and_sharing.py  0004_attachments.py
app/: __init__.py  main.py
app/ai/: models.py  router.py  schemas.py
app/analytics/: router.py  service.py
app/api/: deps.py
app/core/: config.py  encryption.py  events.py  logging.py  rate_limit.py  rbac.py  redis.py  security.py
app/database/: base.py  mixins.py  models.py  session.py  types.py
app/datasets/: anonymize.py  models.py  national.py  repository.py  router.py  schemas.py  service.py
app/media/: models.py  repository.py  router.py  schemas.py  service.py
app/notifications/: celery_app.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
app/predictions/: base.py  disease_model.py  models.py  repository.py  revenue_model.py  router.py  schemas.py  service.py  yield_model.py
app/shared/: enums.py  exceptions.py  repository.py  schemas.py
app/simulations/: engine.py  models.py  (+2 more)
deploy/: README.md  apache-vhost.conf  murimi-api.service  murimi-beat.service  murimi-worker.service
docs/: erd.md
scripts/: init-test-db.sql  seed.py
tests/: conftest.py  test_ai_predictions.py  test_auth_tenancy.py  test_crud.py  test_crud_full.py  test_datasets.py  test_logic.py  test_media.py  test_whatsapp.py
(+76 files in other folders)
